# NovusCore-Region

./: CMakeLists.txt
region/: ConsoleCommands.h  EngineLoop.cpp  defines.h  main.cpp
region/ConsoleCommands/: PingCommand.h
region/ECS/Components/Network/: ConnectionComponent.h  ConnectionDeferredSingleton.h  ConnectionSingleton.h
region/ECS/Systems/Network/: ConnectionSystems.cpp
region/Network/Handlers/Client/: GeneralHandlers.cpp  GeneralHandlers.h
region/Network/Handlers/Self/: GeneralHandlers.cpp
region/Network/Handlers/Self/Auth/: AuthHandlers.cpp
region/Utils/: ServiceLocator.cpp
src/: CMakeLists.txt  ConsoleCommands.h  EngineLoop.h  main.cpp
src/ConsoleCommands/: QuitCommand.h
src/ECS/Systems/Network/: ConnectionSystems.cpp  ConnectionSystems.h
src/Network/Handlers/Client/: GeneralHandlers.cpp  GeneralHandlers.h
src/Network/Handlers/Self/: GeneralHandlers.cpp  GeneralHandlers.h
src/Network/Handlers/Self/Auth/: AuthHandlers.cpp  AuthHandlers.h
src/Utils/: ServiceLocator.h
